# astrobayes

./: Cargo.toml  README.md  Untitled.ipynb  beta_samples.csv
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  gaia_hr_data-checkpoint.csv  koi_candidates-checkpoint.csv
data/: cleaned_exoplanet_data.csv
notebooks/: beta_samples.csv  visualize posterior.ipynb
notebooks/.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb
src/: blr.rs  fileio.rs  main.rs  tests.rs
